--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jieon.toto.io",
+  "homepage": "https://ji-eon.github.io/toto_min/",
   "proxy": "https://api.localhost",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
